--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </head>
 <body>
     <!-- Load the p5.js sketch -->
-    <script src="sketch.js"></script>
+<script src="sketch.js?v=5"></script>
 </body>
 </html>
